# llm-sentence-transformers

./: README.md  llm_embed_sentence_transformers.py  llm_sentence_transformers.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_sentence_transformers.py
